Adds a now page

--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "damienrobson",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#222222",
+  "background_color": "#eee",
+  "theme_color": "#444",
   "icons": [
     {
       "src": "/icons/icon-192.png",
