--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "eleventy",
-    "dev": "eleventy --serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "eleventy --serve"
   },
   "keywords": [],
   "author": "",
